force-app/main/default/objects/PI_Scenario_Line_Item__c/PI_Scenario_Line_Item__c.object-meta.xml
<CustomObject>
    <label>PI Scenario Line Item</label>
    <nameField>
        <label>PI Scenario Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PI Scenario Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>