force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/CurrencyIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CurrencyIsoCode__c</fullName>
    <label>Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>