force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/DealStatus__c.field-meta.xml
<CustomField>
    <fullName>DealStatus__c</fullName>
    <label>Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>