force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/FixedSellMultiplier__c.field-meta.xml
<CustomField>
    <fullName>FixedSellMultiplier__c</fullName>
    <label>Fixed Sell Multiplier</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>