force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/GuidanceMessage__c.field-meta.xml
<CustomField>
    <fullName>GuidanceMessage__c</fullName>
    <label>Guidance Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>