force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>