force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/IsDeleted__c.field-meta.xml
<CustomField>
    <fullName>IsDeleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDeleted</label>
    <type>Checkbox</type>
</CustomField>