force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Line_bol_IsFixed__c.field-meta.xml
<CustomField>
    <fullName>Line_bol_IsFixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line_bol_IsFixed</label>
    <type>Checkbox</type>
</CustomField>