force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Line_cur_RequestedPrice__c.field-meta.xml
<CustomField>
    <fullName>Line_cur_RequestedPrice__c</fullName>
    <label>Line_cur_RequestedPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>