force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Line_mult_FinalTarget__c.field-meta.xml
<CustomField>
    <fullName>Line_mult_FinalTarget__c</fullName>
    <label>Line_mult_FinalTarget</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>