force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/LineCurChangedAuthorizedPrice__c.field-meta.xml
<CustomField>
    <fullName>LineCurChangedAuthorizedPrice__c</fullName>
    <label>Line Cur Changed Authorized Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>