force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/LineCurChangedTotalCost__c.field-meta.xml
<CustomField>
    <fullName>LineCurChangedTotalCost__c</fullName>
    <label>Line Cur Changed Total Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>