force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/LineMultZilliantStart__c.field-meta.xml
<CustomField>
    <fullName>LineMultZilliantStart__c</fullName>
    <label>Zilliant Raw Start</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>