force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>PI Deal History Quote Line Name</label>
    <type>AutoNumber</type>
</CustomField>