force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/OrderedAuthorizedPrice__c.field-meta.xml
<CustomField>
    <fullName>OrderedAuthorizedPrice__c</fullName>
    <label>Ordered Authorized Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>