force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/OverridePrice__c.field-meta.xml
<CustomField>
    <fullName>OverridePrice__c</fullName>
    <label>Override Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>