force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Parent_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Parent_Scenario__c</fullName>
    <label>Parent Scenario</label>
    <referenceTo>PI_Scenario__c</referenceTo>
    <relationshipLabel>PI Scenario Line Items</relationshipLabel>
    <relationshipName>PI_Scenario_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>