force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/PriceSource__c.field-meta.xml
<CustomField>
    <fullName>PriceSource__c</fullName>
    <label>Price Source</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>