force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/PROSNullPriceIndicator__c.field-meta.xml
<CustomField>
    <fullName>PROSNullPriceIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PROS Null Price Indicator</label>
    <type>Checkbox</type>
</CustomField>