force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <label>Quote Line Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>