force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Quote_NBR__c.field-meta.xml
<CustomField>
    <fullName>Quote_NBR__c</fullName>
    <label>Quote NBR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>