force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Quote_Rev__c.field-meta.xml
<CustomField>
    <fullName>Quote_Rev__c</fullName>
    <label>Quote Rev</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>