force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/ReauthorizationMethod__c.field-meta.xml
<CustomField>
    <fullName>ReauthorizationMethod__c</fullName>
    <label>Reauthorization Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>