force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/RequestedPriceIndicator__c.field-meta.xml
<CustomField>
    <fullName>RequestedPriceIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Price Indicator</label>
    <type>Checkbox</type>
</CustomField>