force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Scenario_Designation__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Designation__c</fullName>
    <label>Scenario Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>