force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Segmentation_Key__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Key__c</fullName>
    <label>Segmentation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>