force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/SystemModstamp__c.field-meta.xml
<CustomField>
    <fullName>SystemModstamp__c</fullName>
    <label>SystemModstamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>