force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Unit_Book_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Book_Price__c</fullName>
    <label>Unit Book Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>