force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/UnitExpertPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitExpertPrice__c</fullName>
    <label>Unit Expert Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>