force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/UnitFloorPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitFloorPrice__c</fullName>
    <label>Unit Floor Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>