force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/UnitTargetPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitTargetPrice__c</fullName>
    <label>Unit Target Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>