force-app/main/default/objects/PI_Scenario_Line_Item__c/fields/Warranty_Pct__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Pct__c</fullName>
    <label>Warranty_Pct</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>